--- a/BacaLexia/StoryBoard/MenulisA.storyboard
+++ b/BacaLexia/StoryBoard/MenulisA.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="-81" y="0.0" width="1457" height="1149"/>
                                 <autoresizingMask key="autoresizingMask"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="board" id="GSC-0F-Rqa">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menulis" id="GSC-0F-Rqa">
                                 <rect key="frame" x="254" y="-97" width="678" height="255"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -33,39 +33,9 @@
                                 <rect key="frame" x="443" y="184" width="306" height="341"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group 10Koala" id="Q29-2C-5DK">
-                                <rect key="frame" x="847" y="634" width="417" height="256"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMinY="YES"/>
-                                <gestureRecognizers/>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="3vV-B1-4Ff" appends="YES" id="Udt-7y-csF"/>
-                                </connections>
-                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qfZ-QN-39R" customClass="PKCanvasView">
                                 <rect key="frame" x="443" y="184" width="306" height="341"/>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="menulis" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ksS-MO-Qv4">
-                                <rect key="frame" x="269" y="34" width="654" height="102"/>
-                                <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="88"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </label>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VVq-nu-k6g">
-                                <rect key="frame" x="22" y="523" width="813" height="302"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Text Box Menulis" id="W33-a1-9Ed">
-                                        <rect key="frame" x="0.0" y="0.0" width="834" height="323"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
-                                    </imageView>
-                                </subviews>
-                                <accessibility key="accessibilityConfiguration">
-                                    <accessibilityTraits key="traits" image="YES"/>
-                                </accessibility>
-                            </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow2" id="iBd-f8-xTc">
-                                <rect key="frame" x="29" y="392" width="82" height="82"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow3" translatesAutoresizingMaskIntoConstraints="NO" id="v7i-KA-RRk">
                                 <rect key="frame" x="29" y="34" width="110" height="110"/>
                             </imageView>
@@ -73,21 +43,16 @@
                         <viewLayoutGuide key="safeArea" id="eYH-Na-woM"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="qfZ-QN-39R" firstAttribute="leading" secondItem="OpL-ms-Y4A" secondAttribute="leading" id="8vb-la-oWN"/>
-                            <constraint firstItem="ksS-MO-Qv4" firstAttribute="top" secondItem="v7i-KA-RRk" secondAttribute="top" id="Cm2-3f-XMA"/>
-                            <constraint firstItem="ksS-MO-Qv4" firstAttribute="top" secondItem="eYH-Na-woM" secondAttribute="top" constant="34" id="EZK-qK-AwQ"/>
-                            <constraint firstItem="qfZ-QN-39R" firstAttribute="bottom" secondItem="OpL-ms-Y4A" secondAttribute="bottom" id="Rae-aX-k0G"/>
-                            <constraint firstItem="v7i-KA-RRk" firstAttribute="leading" secondItem="iBd-f8-xTc" secondAttribute="leading" id="YBb-nB-iQJ"/>
-                            <constraint firstItem="qfZ-QN-39R" firstAttribute="trailing" secondItem="OpL-ms-Y4A" secondAttribute="trailing" id="ZiY-WE-Tfk"/>
-                            <constraint firstItem="qfZ-QN-39R" firstAttribute="top" secondItem="OpL-ms-Y4A" secondAttribute="top" id="evC-gr-APQ"/>
-                            <constraint firstItem="qfZ-QN-39R" firstAttribute="centerX" secondItem="ksS-MO-Qv4" secondAttribute="centerX" id="fwY-Ok-rlt"/>
-                            <constraint firstItem="eYH-Na-woM" firstAttribute="trailing" secondItem="ksS-MO-Qv4" secondAttribute="trailing" constant="271" id="lLe-FN-3oL"/>
+                            <constraint firstItem="v7i-KA-RRk" firstAttribute="top" secondItem="eYH-Na-woM" secondAttribute="top" constant="34" id="Ses-pe-bbJ"/>
+                            <constraint firstItem="qfZ-QN-39R" firstAttribute="bottom" secondItem="OpL-ms-Y4A" secondAttribute="bottom" id="TBA-8D-3yp"/>
+                            <constraint firstItem="v7i-KA-RRk" firstAttribute="leading" secondItem="eYH-Na-woM" secondAttribute="leading" constant="29" id="W57-IF-NcP"/>
+                            <constraint firstItem="qfZ-QN-39R" firstAttribute="trailing" secondItem="OpL-ms-Y4A" secondAttribute="trailing" id="YTz-Og-4Rk"/>
+                            <constraint firstItem="GSC-0F-Rqa" firstAttribute="leading" secondItem="v7i-KA-RRk" secondAttribute="trailing" constant="115" id="dE5-AV-Fs7"/>
+                            <constraint firstItem="qfZ-QN-39R" firstAttribute="leading" secondItem="OpL-ms-Y4A" secondAttribute="leading" id="lBs-Uw-Hg2"/>
+                            <constraint firstItem="qfZ-QN-39R" firstAttribute="top" secondItem="OpL-ms-Y4A" secondAttribute="top" id="oYo-dE-0Gz"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="KoalaBtn" destination="Q29-2C-5DK" id="YCu-Gk-RNz"/>
-                        <outlet property="TextBantuan" destination="W33-a1-9Ed" id="cKH-hY-b9N"/>
-                        <outlet property="backActivityButton" destination="iBd-f8-xTc" id="fir-Do-xf2"/>
                         <outlet property="backButton" destination="v7i-KA-RRk" id="ypA-wK-KnV"/>
                         <outlet property="hurufImage" destination="OpL-ms-Y4A" id="5hZ-RE-jOZ"/>
                         <outlet property="mCanvas" destination="qfZ-QN-39R" id="G6j-yc-Cvp"/>
@@ -100,13 +65,10 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Background " width="1454" height="1379"/>
-        <image name="Group 10Koala" width="416" height="256"/>
+        <image name="Background " width="1194" height="834"/>
         <image name="Group 6boardbesar" width="768" height="424"/>
-        <image name="Text Box Menulis" width="834" height="323"/>
-        <image name="arrow2" width="156" height="156"/>
         <image name="arrow3" width="110" height="110"/>
-        <image name="board" width="686" height="256"/>
+        <image name="menulis" width="852" height="325"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
